[package]
name = "phint"
version = "0.1.0"
authors = ["Jakob Stigloher <pixunil@gmx.de>"]
build = "build.rs"

[dependencies]
num = "0.1"
rand = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
gtk = {version = "0.1.3", features = ["v3_10"]}
cairo-rs = "0.1.3"

[build-dependencies]
peg = "0.5"
